--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,6 +4,7 @@
    "description": "Awesome project developed with TypeORM.",
    "dependencies": {
       "@types/bcrypt": "^3.0.0",
+      "@types/jsonwebtoken": "^8.3.0",
       "apollo-server": "^2.3.1",
       "apollo-server-express": "^2.3.1",
       "bcrypt": "^3.0.3",
