--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,18 +3,16 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "dependencies": {
-      "@types/bcrypt": "^3.0.0",
-      "@types/jsonwebtoken": "^8.3.0",
       "apollo-server": "^2.3.1",
       "apollo-server-express": "^2.3.1",
       "bcrypt": "^3.0.3",
       "connect-redis": "^3.4.0",
       "cors": "^2.8.5",
+      "dataloader": "^1.4.0",
       "dotenv-safe": "^6.1.0",
       "express": "^4.16.4",
       "express-session": "^1.15.6",
       "graphql": "^14.0.2",
-      "graphql-yoga": "^1.16.9",
       "jsonwebtoken": "^8.4.0",
       "ms": "^2.1.1",
       "pg": "^7.7.1",
@@ -26,12 +24,14 @@
       "start": "cross-env NODE_ENV=development nodemon --exec ts-node src/index.ts"
    },
    "devDependencies": {
+      "@types/bcrypt": "^3.0.0",
       "@types/connect-redis": "^0.0.8",
       "@types/cors": "^2.8.4",
       "@types/express": "^4.16.0",
       "@types/express-session": "^1.15.11",
       "@types/graphql": "^14.0.3",
       "@types/ioredis": "^4.0.4",
+      "@types/jsonwebtoken": "^8.3.0",
       "@types/pg": "^7.4.11",
       "cross-env": "^5.2.0",
       "nodemon": "^1.18.9",
