--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,6 +6,7 @@
       "apollo-server": "^2.3.1",
       "apollo-server-express": "^2.3.1",
       "bcrypt": "^3.0.3",
+      "chalk": "^2.4.2",
       "connect-redis": "^3.4.0",
       "cors": "^2.8.5",
       "dataloader": "^1.4.0",
@@ -18,7 +19,8 @@
       "pg": "^7.7.1",
       "reflect-metadata": "^0.1.12",
       "type-graphql": "^0.16.0",
-      "typeorm": "^0.2.9"
+      "typeorm": "^0.2.9",
+      "uuid": "^3.3.2"
    },
    "scripts": {
       "start": "cross-env NODE_ENV=development nodemon --exec ts-node src/index.ts"
@@ -33,6 +35,7 @@
       "@types/ioredis": "^4.0.4",
       "@types/jsonwebtoken": "^8.3.0",
       "@types/pg": "^7.4.11",
+      "@types/uuid": "^3.4.4",
       "cross-env": "^5.2.0",
       "nodemon": "^1.18.9",
       "ts-node": "^7.0.1",
