--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,7 +12,6 @@
       "dataloader": "^1.4.0",
       "dotenv-safe": "^6.1.0",
       "express": "^4.16.4",
-      "express-session": "^1.15.6",
       "graphql": "^14.0.2",
       "jsonwebtoken": "^8.4.0",
       "ms": "^2.1.1",
@@ -34,6 +33,7 @@
       "@types/graphql": "^14.0.3",
       "@types/ioredis": "^4.0.4",
       "@types/jsonwebtoken": "^8.3.0",
+      "@types/ms": "^0.7.30",
       "@types/pg": "^7.4.11",
       "@types/uuid": "^3.4.4",
       "cross-env": "^5.2.0",
