--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "cross-env NODE_ENV=development nodemon --exec ts-node src/index.ts"
+    "bootstrap": "lerna bootstrap",
+    "dev": "lerna run dev --parallel"
   }
 }
