--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -22,7 +22,8 @@
       "uuid": "^3.3.2"
    },
    "scripts": {
-      "dev": "cross-env NODE_ENV=development nodemon --exec ts-node src/index.ts"
+      "dev": "cross-env NODE_ENV=development nodemon --exec ts-node src/index.ts",
+      "seed": "ts-node src/seeds/index.ts"
    },
    "devDependencies": {
       "@types/bcrypt": "^3.0.0",
