--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "with-apollo-and-redux",
+    "name": "@reart/app",
     "version": "2.0.0",
     "scripts": {
         "dev": "cross-env NODE_ENV=development node server.js",
@@ -24,13 +24,6 @@
         "babel-plugin-lodash": "^3.3.4",
         "babel-plugin-styled-components": "^1.10.0",
         "bunyan": "^1.8.12",
-        "eslint": "^5.10.0",
-        "eslint-config-airbnb": "^17.1.0",
-        "eslint-plugin-import": "^2.14.0",
-        "eslint-plugin-jest": "^22.1.2",
-        "eslint-plugin-jsx-a11y": "^6.1.2",
-        "eslint-plugin-promise": "^4.0.1",
-        "eslint-plugin-react": "^7.11.1",
         "express": "^4.16.4",
         "formik": "^1.4.0",
         "graphql": "^14.0.2",
@@ -44,10 +37,11 @@
         "next-redux-wrapper": "^2.1.0",
         "next-routes": "^1.4.2",
         "polished": "^2.3.1",
-        "react": "^16.7.0-alpha.2",
+        "react": "^16.8.0-alpha.0",
         "react-apollo": "^2.3.3",
         "react-click-outside": "^3.0.1",
-        "react-dom": "^16.6.3",
+        "react-dom": "16.8.0-alpha.0",
+        "react-ecommerce-hook": "^1.0.4",
         "react-id-swiper": "^1.6.8",
         "react-redux": "^6.0.0",
         "react-select": "^2.1.2",
@@ -63,6 +57,8 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "cross-env": "^5.2.0"
+        "babel-eslint": "^10.0.1",
+        "cross-env": "^5.2.0",
+        "lodash.omit": "^4.5.0"
     }
 }
