--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -27,5 +27,5 @@
       "resolveJsonModule": true
    },
    "exclude": ["node_modules"],
-   "include": ["./src/**/*.tsx", "./src/**/*.ts"],
+   "include": ["./src/**/*.tsx", "./src/**/*.ts"]
 }
