--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -20,6 +20,7 @@
         "@zeit/next-typescript": "^1.1.1",
         "apollo-client": "2.4.7",
         "apollo-client-preset": "^1.0.4",
+        "apollo-upload-client": "^10.0.0",
         "axios": "^0.18.0",
         "babel-plugin-lodash": "^3.3.4",
         "babel-plugin-styled-components": "^1.10.0",
@@ -41,6 +42,7 @@
         "react-apollo": "^2.3.3",
         "react-click-outside": "^3.0.1",
         "react-dom": "16.8.0-alpha.0",
+        "react-dropzone": "^8.0.4",
         "react-ecommerce-hook": "^1.0.4",
         "react-id-swiper": "^1.6.8",
         "react-redux": "^6.0.0",
