--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,9 +14,11 @@
       "express": "^4.16.4",
       "graphql": "^14.0.2",
       "jsonwebtoken": "^8.4.0",
+      "mkdirp": "^0.5.1",
       "ms": "^2.1.1",
       "pg": "^7.7.1",
       "reflect-metadata": "^0.1.12",
+      "shortid": "^2.2.14",
       "type-graphql": "^0.16.0",
       "typeorm": "^0.2.9",
       "uuid": "^3.3.2"
@@ -34,8 +36,10 @@
       "@types/graphql": "^14.0.3",
       "@types/ioredis": "^4.0.4",
       "@types/jsonwebtoken": "^8.3.0",
+      "@types/mkdirp": "^0.5.2",
       "@types/ms": "^0.7.30",
       "@types/pg": "^7.4.11",
+      "@types/shortid": "^0.0.29",
       "@types/uuid": "^3.4.4",
       "cross-env": "^5.2.0",
       "nodemon": "^1.18.9",
